# CameraCalibration

./: CMakeLists.txt  CameraCalibration.kdev4  README.md
.kdev4/: CameraCalibration.kdev4
include/: calibration.h  ceres_costfun.h  homography.h
src/: calibration.cc  homography.cc  main.cpp
